--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ padding-right: 20px;}
 {
     font-size: 20px;
     font-weight: 900;
+    padding-left: 20px;
     }
 
 .txttitre2
@@ -71,7 +72,7 @@ padding-right: 20px;}
 {
     display: flex;
     justify-content: start;
-    direction: row;
+    flex-direction: row;
     align-items: stretch;
     height: 50px;
     width: 335px;
@@ -96,8 +97,7 @@ padding-right: 20px;}
     border-left: none;
     border-right: none;
     padding-left: 20px;
-    -webkit-appearance: textfield;
-        outline-offset: -2px;
+       
 }
 
 .intrechercher
@@ -165,7 +165,9 @@ border-radius: 100%;}
 {font-size: 14px;
  font-weight: 600;
  padding-left: 10px;
-padding-right: 20px;}
+padding-right: 20px;
+margin-bottom: 0px;
+margin-left: 0px;}
 
 .h-icone:hover
 {background-color: teal;}
@@ -194,23 +196,177 @@ margin-right: 13px;
 #textinfo
 {margin-top: 0px;
     margin-bottom: 0px;
+    padding-bottom: 40px;
 }
 
+/*Les plus populaires*/
 .pluspop
 {
     background-color: gray;
     width: 100%;
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
 
-.pluspop
+.pop
 {display: flex;
 flex-direction: row;
-justify-content: space-around;}
+justify-content: space-between;
+align-items: center;
+text-align: left;
+padding-left: 20px;
+padding-right: 20px;
+}
 
+.blocpop
+{
+width:330px;
+height: 145px;
+background-color: white;
+border-radius: 25px 25px 25px 25px;
+display: flex;
+flex-direction: row;
+margin-left: 20px;
+padding-bottom: 10px;
 
+}
 
+.blocimage
+{
+height:145px;
+  width: 35%;
+  border-radius: 25px 0 0 25px;
+  padding-top: 5px;
+  padding-left: 5px;
+  object-fit: cover;
+}
+.bloctext
+{
+    padding-left: 20px;
+    text-align: left;
+    padding-right: 20px;
+    
+}
 
+.ulpop{
+    padding-top: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    text-align: left;
+    padding-left: 0px;
+    list-style: none;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 
+.titreheb
+{font-weight: 900;
+font-size: 16px;}
+.prixheb
+{
+    font-size: 12px;
+ font-weight: 200;
+ margin-bottom: 5px;
+ margin-top: 5px;
+ 
+}
+
+.euro{
+    font-weight: 900;
+}
+.hebtext
+{font-size: 14px;
+ font-weight: 600;
+ padding-left: 00px;
+padding-right: 20px;
+margin-bottom: 0px;
+margin-left: 0px;}
+
+/*Hébergement à Marseille*/
+.blocheb
+{width:330px;
+    height: 200px;
+    background-color: red;
+    border-radius: 25px 25px 25px 25px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    margin-bottom: 10px;}
+
+.imgheber
+{height:60%;
+    width: 320px;
+    border-radius: 25px 25px 0 0 ;
+    padding-top: 5px;
+    padding-left: 5px;
+    object-fit: cover;}
+
+    .bloctextheb
+    {display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-left: 15px;
+}
+
+.ulheb{
+    height: 14px;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    text-align: left;
+    padding-left: 0px;
+    list-style: none;
+    margin-top: -2px;
+    margin-bottom: 0px;
+  
+}
+/*Activite*/
+.imageactivite
+{display: flex;
+    justify-content: center;
+flex-direction: column;
+align-items: center;
+text-align: left;
+padding-bottom: 10px;}
+
+.activite
+{width:330px;
+    height: 190px;
+    background-color: red;
+    border-radius: 25px 25px 25px 25px;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    margin-left: 20px;
+    margin-bottom: 10px;}
+
+    .imgactiv
+{height:136px;
+    width: 320px;
+    border-radius: 25px 25px 0 0 ;
+    padding-top: 5px;
+    padding-left: 5px;
+    object-fit: cover;}
+
+    /*footer*/
+   .footer
+   {background-color: gray;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 30px;
+padding-left: 30px;}
+
+.footerh2
+{
+font-size: 15px;
+font-weight: 900;
+padding-top: 15px;
+}
+
+.pfooter
+{font-size: 12px;
+}
 
 
 
