--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
-/* Mobile First */ 
-body 
-{
+/* Mobile First---iphone8 375px-----niveau1 sur 4*/ 
+body{
     font-family: 'Raleway', sans-serif;
     margin: 0px;
 }
-header
-{ 
+
+header{ 
     display: grid;
     grid-template: "topLeft  topRight" 120px
                     "bottom  bottom" 40px;
@@ -22,7 +21,6 @@ header
     justify-content: space-around;
 }
 .menu-item{
-    
     text-decoration: none;
     color: black;
     width: 100%;
@@ -37,39 +35,38 @@ header
     padding-right: 20px;
     padding-top: 50px;
     text-align: right;
-    
 }
 #signLink{
     text-decoration: none;
     color: #0065FC;
     font-weight: 600;
-   
 }
 /*Trouver votre hébergement*/
-.section1
-{padding-left: 20px;
-padding-right: 20px;}
-
-.txttitre
-{
+.section1{
+padding-left: 20px;
+padding-right: 20px;
+}
+.txttitre{
+    font-size: 20px;
+    font-weight: 900;
+}
+.txttitre1{
     font-size: 20px;
     font-weight: 900;
     padding-left: 20px;
-    }
-
-.txttitre2
-{
+}
+.txttitre2{
     font-size: 18px;
     font-weight: 700;
+    padding-left: 20px;
 }
-
-.txtnormal
-{font-size: 14px;
+.txtnormal{
+    font-size: 14px;
     font-weight: 300;
-    letter-spacing: 0.01em;}
-
-.formrecher
-{
+    letter-spacing: 0.01em;
+    padding-left: 10px;
+}
+.formrecher{
     display: flex;
     justify-content: start;
     flex-direction: row;
@@ -78,9 +75,7 @@ padding-right: 20px;}
     width: 335px;
     padding-top: 30px;
 }
-
-#map
-{
+#map{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,24 +85,21 @@ padding-right: 20px;}
     background-color: #F2F2F2;
     border-radius: 20px 0 0 20px;  
 }
-
-#rechercher
-{border-top: #F2F2F2 solid 3px;
+#rechercher{
+    border-top: #F2F2F2 solid 3px;
     border-bottom: #F2F2F2 solid 3px;
     border-left: none;
     border-right: none;
     padding-left: 20px;
-       
 }
-
-.intrechercher
-{font-family: raleway;
+.intrechercher{
+    font-family: raleway;
     font-size: 15px;
     font-weight: 700;
-    color: black;}
-
-#iconrecher
-{display: flex;
+    color: black;
+}
+#iconrecher{
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -115,139 +107,127 @@ padding-right: 20px;}
     height: 50px;
     width: 50px;
     background-color: #0065fc;
-    border-radius: 20px 20px 20px 20px;}
-
-.textrecher
-{display: none;}
-
-/*Filtres*/
-.ecofam
-{display: flex;
-flex-direction: row;
+    border-radius: 20px 20px 20px 20px;
 }
-
-.filter
-{display: flex;
- justify-content: left;
+.textrecher{
+    display: none;
+}
+/*Filtres*/
+.ecofam{
+    display: flex;
+    flex-direction: row;
+}
+.filter{
+    display: flex;
+    justify-content: left;
     align-items: center;
     text-align: center;
     border: black solid 2px;
     border-radius: 25px 25px 25px 25px;
     height: 50px;
     margin-bottom: 15px;
-    }
-
-#economique
-{width: 175px;
-margin-right: 15px;}
-
-#familial
-{width: 135px;}
-
-#romantique
-{width: 170px;}
-
-#animaux
-{width: 220px;}
-
-.h-icone
-{
- width: 50px;
- height: 50px;
- display: flex; 
-justify-content: center;
-align-items: center;
-color: #0065FC;
-background-color: #DEEBFF ;
-border-radius: 100%;}
-
-.h-text
-{font-size: 14px;
- font-weight: 600;
- padding-left: 10px;
-padding-right: 20px;
-margin-bottom: 0px;
-margin-left: 0px;}
-
-.h-icone:hover
-{background-color: teal;}
-
-/*information*/
-#info
-{display: flex;
-justify-content: left;
-align-items: flex-start;
-text-align: left;
-padding-top: 30px;
 }
-
-#iconeinfo
-{display: flex;
+#economique{
+    width: 175px;
+    margin-right: 15px;
+}
+#familial{
+    width: 135px;
+}
+#romantique{
+    width: 170px;
+}
+#animaux{
+    width: 220px;
+}
+.h-icone{
+    width: 50px;
+    height: 50px;
+    display: flex; 
     justify-content: center;
     align-items: center;
+    color: #0065FC;
+    background-color: #DEEBFF ;
+    border-radius: 100%;
+}
+.h-text{
+    font-size: 14px;
+    font-weight: 600;
+    padding-left: 10px;
+    padding-right: 20px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    text-decoration: none;
+    color: black;
+}
+.h-icone:hover{
+    background-color: teal;
+}
+/*information*/
+#info{
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    padding-top: 30px;
+}
+#iconeinfo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align:initial;
     width: 25px;
     color: #0065FC;
-height: 25px;
-border-radius: 100%;
-border: black solid 1px;
-margin-right: 13px;
+    height: 25px;
+    border-radius: 100%;
+    border: black solid 1px;
+    margin-right: 13px;
 }
 
-#textinfo
-{margin-top: 0px;
+#textinfo{
+    margin-top: 0px;
     margin-bottom: 0px;
     padding-bottom: 40px;
 }
-
 /*Les plus populaires*/
-.pluspop
-{
+.pluspop{
     background-color: gray;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 30px;
 }
-
-.pop
-{display: flex;
-flex-direction: row;
-justify-content: space-between;
-align-items: center;
-text-align: left;
-padding-left: 20px;
-padding-right: 20px;
+.pop{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
 }
-
-.blocpop
-{
-width:330px;
-height: 145px;
-background-color: white;
-border-radius: 25px 25px 25px 25px;
-display: flex;
-flex-direction: row;
-margin-left: 20px;
-padding-bottom: 10px;
-
+.blocpop{
+    width:330px;
+    height: 145px;
+    background-color: white;
+    border-radius: 25px 25px 25px 25px;
+    display: flex;
+    flex-direction: row;
+    margin-left: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
-
-.blocimage
-{
-height:145px;
-  width: 35%;
-  border-radius: 25px 0 0 25px;
-  padding-top: 5px;
-  padding-left: 5px;
-  object-fit: cover;
+.blocimage{
+    height:145px;
+    width: 35%;
+    border-radius: 25px 0 0 25px;
+    padding-top: 5px;
+    padding-left: 5px;
+    object-fit: cover;
 }
-.bloctext
-{
+.bloctext{
     padding-left: 20px;
     text-align: left;
     padding-right: 20px;
-    
 }
-
 .ulpop{
     padding-top: 15px;
     display: flex;
@@ -258,57 +238,69 @@ height:145px;
     list-style: none;
     margin-top: 0px;
     margin-bottom: 0px;
+    letter-spacing: 2px;
 }
-
-.titreheb
-{font-weight: 900;
-font-size: 16px;}
-.prixheb
-{
+.titreheb{
+    font-weight: 900;
+    font-size: 16px;
+}
+.prixheb{
     font-size: 12px;
- font-weight: 200;
- margin-bottom: 5px;
- margin-top: 5px;
- 
+    font-weight: 200;
+    padding-left: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
-
+.prixpop{
+    font-size: 12px;
+    font-weight: 200;
+    margin-top: 5px;
+    padding-bottom: 0px;
+    padding-bottom: 10px;
+    }
 .euro{
     font-weight: 900;
 }
-.hebtext
-{font-size: 14px;
- font-weight: 600;
- padding-left: 00px;
-padding-right: 20px;
-margin-bottom: 0px;
-margin-left: 0px;}
-
+.hebtext{
+    font-size: 14px;
+    font-weight: 600;
+    padding-left: 10px;
+    padding-right: 20px;
+    margin-bottom: 0px;
+}
+.etoilespop{
+    padding-bottom: 5px;
+    padding-left:0px;
+}
+.etoiles{
+    padding-left: 10px;
+    padding-bottom: 10px;
+}
 /*Hébergement à Marseille*/
-.blocheb
-{width:330px;
-    height: 200px;
+.blocheb{
+    width:330px;
+    height: 205px;
     background-color: red;
     border-radius: 25px 25px 25px 25px;
     display: flex;
     flex-direction: column;
     margin-left: 20px;
-    margin-bottom: 10px;}
-
-.imgheber
-{height:60%;
+    margin-bottom: 10px;
+}
+.imgheber{
+    height:60%;
     width: 320px;
     border-radius: 25px 25px 0 0 ;
     padding-top: 5px;
     padding-left: 5px;
-    object-fit: cover;}
-
-    .bloctextheb
-    {display: flex;
+    object-fit: cover;
+}
+.bloctextheb{
+    display: flex;
     flex-direction: column;
     text-align: left;
     padding-left: 15px;
 }
-
 .ulheb{
     height: 14px;
     display: flex;
@@ -319,19 +311,21 @@ margin-left: 0px;}
     list-style: none;
     margin-top: -2px;
     margin-bottom: 0px;
-  
 }
 /*Activite*/
-.imageactivite
-{display: flex;
-    justify-content: center;
-flex-direction: column;
-align-items: center;
-text-align: left;
-padding-bottom: 10px;}
-
-.activite
-{width:330px;
+.txttitreactiv{
+    font-size: 20px;
+    font-weight: 900;
+}
+.imageactivite{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding-bottom: 10px;
+    width: 100%;
+}
+.activite{
+    width:330px;
     height: 190px;
     background-color: red;
     border-radius: 25px 25px 25px 25px;
@@ -339,48 +333,62 @@ padding-bottom: 10px;}
     flex-direction: column;
     justify-items: center;
     margin-left: 20px;
-    margin-bottom: 10px;}
-
-    .imgactiv
-{height:136px;
+    margin-bottom: 10px;
+    box-shadow: 5px 5px 5px 3px #F2F2F2;
+}
+.imgactiv{
+    height:136px;
+    width: 100%;
     width: 320px;
     border-radius: 25px 25px 0 0 ;
     padding-top: 5px;
     padding-left: 5px;
-    object-fit: cover;}
-
-    /*footer*/
-   .footer
-   {background-color: gray;
+    object-fit: cover;
+}
+/*footer*/
+.footer{
+    background-color: gray;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 30px;
-padding-left: 30px;}
-
-.footerh2
-{
-font-size: 15px;
-font-weight: 900;
-padding-top: 15px;
+    padding-left: 30px;
+}
+.footerh2{
+    font-size: 15px;
+    font-weight: 900;
+    padding-top: 15px;
+}
+.pfooter{
+    font-size: 12px;
+    text-decoration: none;
+    color: black;
+    height: 30px;
 }
 
-.pfooter
-{font-size: 12px;
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content:stretch; 
+    padding-left: 30px;   
+    padding-right: 15%;  
 }
-
-
-
-
-/*------------responsive desktop------------------*/
-@media screen and (min-width: 800px) {
-    
-header
-{ 
+.footer1, .footer2, .footer3{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+}
+/*------------responsive desktop--niveau4 (max)----------------*/
+@media screen and (min-width: 1280px) {
+body{
+    max-width: 1440px;
+    margin: auto;
+}
+header{ 
     grid-template: "topLeft top top topRight" 100px / auto 160px 160px 100px;
 }
 .menu{
    grid-area: top;
-   
 }
 .menu-item{
     padding-top: 50px;
@@ -391,21 +399,35 @@ header
     border-color: #0065FC;
     color:  #0065FC;
 }
-
-#signLink
-{padding-right: 80px;}
-
-.formrecher
-{    width: 420px;
+#signLink{
+    padding-right: 80px;
+}
+.txttitre{
+    padding-left: 20px;
+}
+.txttitre1{
+    font-size: 20px;
+    font-weight: 900;
+    padding-left: 0px;
+}
+.txttitreactiv{
+   padding-left: 20px;
+}
+.txtnormal{
+    padding-left: 0px;
+}
+.formrecher{
+    width: 420px;
     padding-top: 20px;
 }
-#iconrecher
-{display: none;}
 
-.textrecher
-
-{display: flex;
-    justify-content: center;
+/*formulaire rechercher*/
+#iconrecher{
+    display: none;
+}
+.textrecher{
+    display: flex;
+    justify-content:start;
     align-items: center;
     text-align: center;
     color: white;
@@ -414,22 +436,233 @@ header
     width: 135px;
     background-color: #0065fc;
     border-radius: 0px 20px 20px 0px;
+    padding-left: 20px;
+    letter-spacing:0.5mm;
 }
 /*filtre*/
-#filtres
-{display: flex;
-flex-direction: row;
-margin-top: 30px;}
+#filtres{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+}
+#economique, #familial, #romantique, #animaux{
+    margin-right: 25px;
+}
+#economique{
+    margin-left: 35px;
+}
+/*hebergement et plus populaire*/
+.hebetpop{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content:flex-end;
+    align-items:flex-start;
+    text-align:left;
+    padding-left: 20px;
+}
+.hebergement{
+    background-color: gray;
+    width: 100%;
+    border-radius: 25px 25px 25px 25px;
+    margin-right: 40px;
+    padding-left: 20px;
+    padding-top: 20px;
+}
+.blocheb1{
+    display: flex;
+    flex-direction: row;
+    padding-right: 0px;
+}
+#blocheb1a{
+    margin-left: 0px;
+}
+.pop{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.pluspop{
+    border-radius: 25px 25px 25px 25px;
+    width: 420px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.blocheb{
+    width:245px;
+}
+.imgheber{
+    width: 233px;
+}
+.txttitreactiv{
+    font-size: 20px;
+    font-weight: 900;
+    padding-left: 20px;
+    padding-left: 0px;
+}
+.hebtext{
+    padding-left: 0px;
+    margin-left: 0px;
+}
+.blocpop{
+    margin-bottom: 40px;
+    padding-left: 0px;
+    margin-left: 0px;
+}
+/*Activite*/
+.txttitre2{
+    padding-left: 15px;
+}
+.activitedesktop{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.hebtext{
+    padding-left: 15px;
+    padding-top: 5px;
+}
+.imageactivite{
+    display: flex;
+    flex-direction: row;
+}
+#imgactivite1{
+    height:445px;
+    width: 305px;
+    border-radius: 25px 25px 25px 25px;
+    grid-area: 1 / 1 / 3 / 3;
+}
+#imageactiv1{
+    height:390px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+.imgactiv{
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+}
+#imgactivite2{
+    height:240px;
+    width: 305px;
+    margin-bottom: 30px;
+    border-radius: 25px 25px 25px 25px;
+    grid-area: 1 / 2 / 3 / 2;
+}
+#imageactiv2{
+    height:180px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+#imgactivite3{
+    height:165px;
+    width: 305px;
+    border-radius: 25px 25px 25px 25px;
+    grid-area: 2 / 2 / 3 / 2;
+}
+#imageactiv3{
+    height:115px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+#imgactivite4{
+    height:445px;
+    width: 305px;
+    border-radius: 25px 25px 25px 25px;
+    grid-area:1 / 3 / 3 / 4;
+}
+#imageactiv4{
+    height:390px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+#imgactivite5{
+    height:200px;
+    width: 305px;
+    margin-bottom: 30px;
+    border-radius: 25px 25px 25px 25px ;
+}
+#imageactiv5{
+    height:140px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+#imgactivite6{
+    height:205px;
+    width: 305px;
+    border-radius: 25px 25px 25px 25px ;
+    grid-area: 2 / 4 / 3 / 4;
+}
+#imageactiv6{
+    height:155px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+/*Footer*/
+.footer{
+    flex-direction: row;
+}
+.footer1,.footer2, .footer3{
+    width: 33%;
+}
+}
 
-#economique, #familial, #romantique, #animaux
-{margin-right: 25px;}
 
-#economique
-{margin-left: 35px;}
-
-/*info*/
-#info
-{align-items: center;}
-
-
+/*------------responsive niveau3------------------*/
+@media screen and (min-width: 768px) and (max-width: 1023px){
+    body{
+        margin: auto;
+    }
+    header{ 
+        grid-template: "topLeft top top topRight" 100px / auto 160px 160px 100px;
+    }
+    .menu{
+       grid-area: top;
+    }
+    .menu-item{
+        padding-top: 50px;
+        border-bottom: none;
+        border-top: #F2F2F2 3px solid;
+    }
+    .menu-item:hover{
+        border-color: #0065FC;
+        color:  #0065FC;
+    }
+    #signLink{
+        padding-right: 80px;
+    }
+    .txttitre{
+        padding-left: 20px;
+    }
+    .txttitre1{
+        font-size: 20px;
+        font-weight: 900;
+        padding-left: 0px;
+    }
+    .txttitreactiv{
+       padding-left: 20px;
+    }
+    .txtnormal{
+        padding-left: 0px;
+    }
+    /*formulaire rechercher*/
+    .formrecher{
+        width: 420px;
+        padding-top: 20px;
+    }
+    #iconrecher{
+        display: none;
+    }
+    .textrecher{
+        display: flex;
+        justify-content:start;
+        align-items: center;
+        text-align: center;
+        color: white;
+        font-weight: 800;
+        height: 50px;
+        width: 135px;
+        background-color: #0065fc;
+        border-radius: 0px 20px 20px 0px;
+        padding-left: 20px;
+        letter-spacing:0.5mm;
+    }
 }
