--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
-/* Mobile First---iphone8 375px-----niveau1 sur 4*/ 
+/* Mobile First----niveau1----iphone8 375px-----*/
+
+/* au total 4 niveaux de responsive
+    niveau1 mobile                max 480px
+    niveau2             min 481px max 768px
+    niveau3             min 769px max 1279px
+    niveau4 desktop     min 1280px -------*/
+
 body{
     font-family: 'Raleway', sans-serif;
     margin: 0px;
@@ -56,9 +63,10 @@ padding-right: 20px;
     padding-left: 20px;
 }
 .txttitre2{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     padding-left: 20px;
+    margin-top: 20px;
 }
 .txtnormal{
     font-size: 14px;
@@ -86,18 +94,31 @@ padding-right: 20px;
     border-radius: 20px 0 0 20px;  
 }
 #rechercher{
-    border-top: #F2F2F2 solid 3px;
-    border-bottom: #F2F2F2 solid 3px;
+    border-top: #F2F2F2 solid 1px;
+    border-bottom: #F2F2F2 solid 1px;
     border-left: none;
     border-right: none;
     padding-left: 20px;
+    color: black;
+    font-weight: 700;
+    
 }
+a{
+    text-decoration: none;
+    color: black;
+}
+
 .intrechercher{
     font-family: raleway;
     font-size: 15px;
     font-weight: 700;
     color: black;
 }
+input{
+    color: black;
+    font-weight: 700;
+}
+
 #iconrecher{
     display: flex;
     justify-content: center;
@@ -108,6 +129,11 @@ padding-right: 20px;
     width: 50px;
     background-color: #0065fc;
     border-radius: 20px 20px 20px 20px;
+}
+
+ #map:hover, .textrecher:hover{
+    color:#0065fc;
+    background-color: #F2F2F2
 }
 .textrecher{
     display: none;
@@ -122,9 +148,10 @@ padding-right: 20px;
     justify-content: left;
     align-items: center;
     text-align: center;
-    border: black solid 2px;
+    border: #F2F2F2 solid 2px;
+    border-left: #DEEBFF;
     border-radius: 25px 25px 25px 25px;
-    height: 50px;
+    height: 48px;
     margin-bottom: 15px;
 }
 #economique{
@@ -179,7 +206,7 @@ padding-right: 20px;
     color: #0065FC;
     height: 25px;
     border-radius: 100%;
-    border: black solid 1px;
+    border: #F2F2F2 solid 1px;
     margin-right: 13px;
 }
 
@@ -190,7 +217,7 @@ padding-right: 20px;
 }
 /*Les plus populaires*/
 .pluspop{
-    background-color: gray;
+    background-color: #F2F2F2;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 30px;
@@ -214,6 +241,11 @@ padding-right: 20px;
     margin-left: 20px;
     padding-bottom: 10px;
     margin-bottom: 10px;
+    box-shadow: 5px 5px 5px 3px #F2F2F2;
+}
+.blocpop:hover{
+    cursor: pointer;
+    transform: scale(1.2);
 }
 .blocimage{
     height:145px;
@@ -277,15 +309,24 @@ padding-right: 20px;
     padding-bottom: 10px;
 }
 /*Hébergement à Marseille*/
+.hebergement{
+    margin-bottom: 40px;
+    height: auto;
+}
 .blocheb{
     width:330px;
     height: 205px;
-    background-color: red;
+    background-color:white;
     border-radius: 25px 25px 25px 25px;
     display: flex;
     flex-direction: column;
     margin-left: 20px;
     margin-bottom: 10px;
+    box-shadow: 3px 3px 3px 1px #F2F2F2;
+}
+.blocheb:hover{
+    cursor: pointer;
+    transform: scale(1.2);
 }
 .imgheber{
     height:60%;
@@ -316,33 +357,34 @@ padding-right: 20px;
 .txttitreactiv{
     font-size: 20px;
     font-weight: 900;
+    padding-left: 20px;
 }
 .imageactivite{
     display: flex;
     flex-direction: column;
-    align-items: left;
     padding-bottom: 10px;
     width: 100%;
 }
 .activite{
     width:330px;
     height: 190px;
-    background-color: red;
+    background-color:white;
     border-radius: 25px 25px 25px 25px;
     display: flex;
     flex-direction: column;
     justify-items: center;
     margin-left: 20px;
-    margin-bottom: 10px;
-    box-shadow: 5px 5px 5px 3px #F2F2F2;
+    margin-bottom: 20px;
+    box-shadow: 3px 3px 3px 1px #F2F2F2;
+}
+.activite:hover{
+    cursor: pointer;
+    transform: scale(1.2);
 }
 .imgactiv{
     height:136px;
     width: 100%;
-    width: 320px;
     border-radius: 25px 25px 0 0 ;
-    padding-top: 5px;
-    padding-left: 5px;
     object-fit: cover;
 }
 /*footer*/
@@ -384,6 +426,7 @@ body{
     max-width: 1440px;
     margin: auto;
 }
+/*header*/
 header{ 
     grid-template: "topLeft top top topRight" 100px / auto 160px 160px 100px;
 }
@@ -402,6 +445,7 @@ header{
 #signLink{
     padding-right: 80px;
 }
+/*parametre des titres*/
 .txttitre{
     padding-left: 20px;
 }
@@ -459,21 +503,24 @@ header{
     align-items:flex-start;
     text-align:left;
     padding-left: 20px;
+    height: auto;
+    width: 100%;
 }
 .hebergement{
-    background-color: gray;
+    background-color: #F2F2F2;
     width: 100%;
+    height: auto;
     border-radius: 25px 25px 25px 25px;
     margin-right: 40px;
     padding-left: 20px;
     padding-top: 20px;
 }
-.blocheb1{
+.blocheb1, .blocheb2{
     display: flex;
     flex-direction: row;
     padding-right: 0px;
 }
-#blocheb1a{
+#blocheb1a #blocheb2a{
     margin-left: 0px;
 }
 .pop{
@@ -483,6 +530,7 @@ header{
 .pluspop{
     border-radius: 25px 25px 25px 25px;
     width: 420px;
+    height: auto;
     padding-left: 40px;
     padding-right: 40px;
 }
@@ -607,12 +655,12 @@ header{
 
 
 /*------------responsive niveau3------------------*/
-@media screen and (min-width: 768px) and (max-width: 1023px){
+@media screen (min-width: 769px) and (max-width: 1023px){
     body{
         margin: auto;
     }
     header{ 
-        grid-template: "topLeft top top topRight" 100px / auto 160px 160px 100px;
+        grid-template: "topLeft top top topRight" 60px / auto 120px 120px 120px;
     }
     .menu{
        grid-area: top;
@@ -643,26 +691,175 @@ header{
     .txtnormal{
         padding-left: 0px;
     }
-    /*formulaire rechercher*/
-    .formrecher{
-        width: 420px;
-        padding-top: 20px;
-    }
-    #iconrecher{
-        display: none;
-    }
-    .textrecher{
-        display: flex;
-        justify-content:start;
-        align-items: center;
-        text-align: center;
-        color: white;
-        font-weight: 800;
-        height: 50px;
-        width: 135px;
-        background-color: #0065fc;
-        border-radius: 0px 20px 20px 0px;
-        padding-left: 20px;
-        letter-spacing:0.5mm;
-    }
+    
+    /*filtre*/
+#filtres{
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
 }
+#economique, #familial, #romantique, #animaux{
+    margin-right: 25px;
+}
+#economique{
+    margin-left: 35px;
+}
+/*hebergement et plus populaire*/
+.hebetpop{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content:flex-end;
+    align-items:flex-start;
+    text-align:left;
+    padding-left: 20px;
+    height: auto;
+    width: 100%;
+}
+.hebergement{
+    background-color: #F2F2F2;
+    width: 100%;
+    height: auto;
+    border-radius: 25px 25px 25px 25px;
+    margin-right: 40px;
+    padding-left: 20px;
+    padding-top: 20px;
+}
+.blocheb1, .blocheb2{
+    display: flex;
+    flex-direction: row;
+    padding-right: 0px;
+}
+#blocheb1a #blocheb2a{
+    margin-left: 0px;
+}
+.pop{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.pluspop{
+    border-radius: 25px 25px 25px 25px;
+    width: 420px;
+    height: auto;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.blocheb{
+    width:245px;
+}
+.imgheber{
+    width: 233px;
+}
+.txttitreactiv{
+    font-size: 20px;
+    font-weight: 900;
+    padding-left: 20px;
+    padding-left: 0px;
+}
+.hebtext{
+    padding-left: 0px;
+    margin-left: 0px;
+}
+.blocpop{
+    margin-bottom: 40px;
+    padding-left: 0px;
+    margin-left: 0px;
+}
+/*Activite*/
+.txttitre2{
+    padding-left: 15px;
+}
+.activitedesktop{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.hebtext{
+    padding-left: 15px;
+    padding-top: 5px;
+}
+.imageactivite{
+    display: flex;
+    flex-direction: row;
+}
+#imgactivite1{
+    height:445px;
+    width: 305px;
+    border-radius: 25px 25px 25px 25px;
+    grid-area: 1 / 1 / 3 / 3;
+}
+#imageactiv1{
+    height:390px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+.imgactiv{
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+}
+#imgactivite2{
+    height:240px;
+    width: 305px;
+    margin-bottom: 30px;
+    border-radius: 25px 25px 25px 25px;
+    grid-area: 1 / 2 / 3 / 2;
+}
+#imageactiv2{
+    height:180px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+#imgactivite3{
+    height:165px;
+    width: 305px;
+    border-radius: 25px 25px 25px 25px;
+    grid-area: 2 / 2 / 3 / 2;
+}
+#imageactiv3{
+    height:115px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+#imgactivite4{
+    height:445px;
+    width: 305px;
+    border-radius: 25px 25px 25px 25px;
+    grid-area:1 / 3 / 3 / 4;
+}
+#imageactiv4{
+    height:390px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+#imgactivite5{
+    height:200px;
+    width: 305px;
+    margin-bottom: 30px;
+    border-radius: 25px 25px 25px 25px ;
+}
+#imageactiv5{
+    height:140px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+#imgactivite6{
+    height:205px;
+    width: 305px;
+    border-radius: 25px 25px 25px 25px ;
+    grid-area: 2 / 4 / 3 / 4;
+}
+#imageactiv6{
+    height:155px;
+    width: 305px;
+    border-radius: 25px 25px 0px 0px;
+}
+/*Footer*/
+.footer{
+    flex-direction: row;
+}
+.footer1,.footer2, .footer3{
+    width: 33%;
+}
+}
+/*------------responsive niveau2------------------*/
+@media screen and (min-width: 481px) and (max-width: 768px){
