--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,28 @@ body{
     font-family: 'Raleway', sans-serif;
     margin: 0px;
 }
+/*Parametre de text*/
+h1{
+    font-size: 20px;
+    font-weight: 900;
+    }
+h2{
+    font-size: 16px;
+    font-weight: 900;
+}
+h3{
+    font-size: 14px;
+    font-weight: 900;
+    padding-right: 50px;
+}
+p{
+    font-weight: 300;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+/*Header*/
 header{ 
     display: grid;
     grid-template: "topLeft  topRight" 120px
@@ -36,40 +58,16 @@ header{
     padding-top: 50px;
     text-align: right;
 }
-#signLink{
+#inscriptionLien{
     text-decoration: none;
     color: #0065FC;
     font-weight: 600;
 }
-/*Parametre de police*/
-.titre1{
-    font-size: 20px;
-    font-weight: 900;
-}
-.titre2{
-    font-size: 16px;
-    font-weight: 900;
-}
-.txtnormal{
-    font-size: 14px;
-    font-weight: 300;
-    letter-spacing: 0.01em;
-}
-.titreheb{
-    font-weight: 900;
-}
 /*Trouver votre hébergement*/
 .trouverhebergement{
-padding-left: 20px;
-padding-right: 20px;
-}
-.txttitre{
-    font-size: 20px;
-    font-weight: 900;
-}
-.txtpop{
-    font-size: 18px;
-    font-weight:900;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .formulaire{
     display: flex;
@@ -100,10 +98,7 @@ padding-right: 20px;
     color: black;
     font-weight: 700;  
 }
-a{
-    text-decoration: none;
-    color: black;
-}
+
 .intrechercher{
     font-family: raleway;
     font-size: 15px;
@@ -180,7 +175,7 @@ a{
 .h-icone:hover{
     background-color: teal;
 }
-/*information*/
+/*Information*/
 #info{
     display: flex;
     align-items: flex-start;
@@ -216,6 +211,7 @@ a{
     justify-content: space-between;
     align-items: center;
     text-align: left;
+    width: 330px;
 }
 .blocpop{
     width: 330px;
@@ -245,7 +241,6 @@ a{
     flex-direction: column;
     padding-left: 20px;
     text-align: left;
-    padding-right: 50px;
 }
 .ulpop{
     padding-top: 15px;
@@ -328,11 +323,10 @@ a{
     margin-top: -2px;
     margin-bottom: 0px;
 }
-/*Activite*/
-.activiteimg{
-    padding-left: 20px;
+/*Activités*/
+.activitephoto{
+    margin-left: 20px;
 }
-
 .imgactivite{
     display: flex;
     flex-direction: column;
@@ -367,8 +361,7 @@ a{
     margin-bottom: 0px;
     padding-left: 20px;
 }
-
-/*footer*/
+/*Footer*/
 .footer{
     background-color: #F2F2F2;
     padding: 30px;
@@ -417,7 +410,7 @@ header{
     border-color: #0065FC;
     color:  #0065FC;
 }
-#signLink{
+#inscriptionLien{
     padding-right: 80px;
 }
 .inscription{
@@ -426,29 +419,17 @@ header{
 .logo{
     padding-left: 55px;
 }
-/*parametre des titres*/
-.txttitre{
-    padding-left: 20px;
-}
-.titre1{
-    font-size:50px;
-    font-weight: 900;
-}
-.txttitreactiv{
-   padding-left: 20px;
-}
-.txtnormal{
-    padding-left: 0px;
-}
+/*Formulaire*/
 .formulaire{
     width: 420px;
     padding-top: 20px;
     margin-bottom: 50px;
 }
-.section1{
-    padding-left: 55px;
+/*Trouver votre hébergement*/
+.trouverhebergement{
+    margin-left: 30px;
 }
-/*formulaire rechercher*/
+/*Formulaire rechercher*/
 #iconrecher{
     display: none;
 }
@@ -466,7 +447,7 @@ header{
     padding-left: 20px;
     letter-spacing:0.5mm;
 }
-/*filtre*/
+/*Filtre*/
 #filtres{
     display: flex;
     flex-direction: row;
@@ -477,7 +458,8 @@ header{
 #economique{
     margin-left: 35px;
 }
-/*hebergement et plus populaire*/
+/*Hébergement et Les plus populaire*/
+/*Hébergement*/
 .hebetpop{
     display: flex;
     flex-direction: row-reverse;
@@ -516,7 +498,7 @@ header{
     padding-bottom: 5px;
 }
 .pluspop{
-    flex: 30%;
+    flex: 25%;
     border-radius: 25px;
     width: 420px;
     height: 600px;
@@ -530,6 +512,7 @@ header{
     margin-bottom: 5px;
     padding-right: 30px;
 }
+/*Les plus populaires*/
 .bloctext{
     padding-right: 0px;
 }
@@ -539,15 +522,12 @@ header{
 .hebtext{
     margin-top: 0px;
 }
-h4{
-    margin-top: 0px;
-}
 .etoilespop{
     padding-top: 10px;
 }
-        /*Activite*/
+/*Activités*/
 .txttitreactiv{
-    padding-left: 0px;
+    padding-left: 10px;
 }
 .activitephoto{
 margin-bottom: 55px;   
@@ -556,19 +536,19 @@ margin-left: 50px;
 .activtext{
     margin-bottom: 15px;
 }
-.imageactivite{
+.imgactivite{
     width: 100%;
     height: 445px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
+    }
 .activite{
     height: auto;
     margin-bottom: 0px;
     width: 305px;
     border-radius: 25px;
-    margin-left: 20px;
+    margin-left: 0px;
     margin-right: 20px;
 }
 .blocactivite{
@@ -576,7 +556,6 @@ margin-left: 50px;
     flex-direction: row;
     justify-content: space-around;
     height: 100%;
-    
 }
 .activitedesktop{
     height: auto;
@@ -597,8 +576,7 @@ margin-left: 50px;
 }
 .imgactivite56{
     height: 145px;
- }
-
+}
 /*Footer*/
 .footer{
     flex-direction: row;
@@ -609,5 +587,7 @@ margin-left: 50px;
     margin-right: 55px;
 }
 }
+/*---------tablette--------*/
+
 
 
