--- a/styles.css
+++ b/styles.css
@@ -174,12 +174,14 @@ header{
 }
 .h-icone:hover{
     background-color: teal;
+    color: white;
 }
 /*Information*/
 #info{
     display: flex;
     align-items: flex-start;
     padding-top: 30px;
+    padding-right: 30px;
 }
 #iconeinfo{
     display: flex;
@@ -211,7 +213,11 @@ header{
     justify-content: space-between;
     align-items: center;
     text-align: left;
-    width: 330px;
+    padding-right: 20px;
+}
+.blocPopResponsive{
+    display: flex;
+    flex-direction: column;
 }
 .blocpop{
     width: 330px;
@@ -358,6 +364,7 @@ header{
     font-size: 14px;
     font-weight: 900;
     padding-right: 20px;
+    margin-top:20px;
     margin-bottom: 0px;
     padding-left: 20px;
 }
@@ -448,7 +455,7 @@ header{
     letter-spacing:0.5mm;
 }
 /*Filtre*/
-#filtres{
+#filtres, .romanimaux{
     display: flex;
     flex-direction: row;
 }
@@ -588,6 +595,64 @@ margin-left: 50px;
 }
 }
 /*---------tablette--------*/
-
+@media screen and (min-width: 600px) and (max-width: 799px) {
+.ecofam, .romanimaux{
+    display: flex;
+    flex-direction: row;
+}
+#romantique{
+    margin-right: 20px;
+}
+.blocPopResponsive{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.blocpop{
+    width: 200px;
+}
+.imgpop{
+    width: 75px;
+}
+h3{
+    padding-right: 0px;
+}
+.bloctext{
+    padding-left: 5px;
+}
+.pop{
+    width: 100%;
+    justify-content: space-between;
+    padding-right: 50px;
+}
+.blocheb1, .blocheb2{
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 20px;
+}
+.blocheb{
+    width: 75%;
+    padding-right: 10px;
+}
+.activitedesktop{
+    display: flex;
+    flex-direction: row;
+}
+.blocactivite{
+    display: flex;
+    flex-direction: row;
+}
+.activite{
+    width: 200px;
+    margin-right: 30px;
+}
+.footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-right: 30px;
+}
+}
 
 
