--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
-/* Mobile First----pondeli havres----iphone8 375px-----*/
+/* Mobile First----0708 a refaire activite----iphone8 375px-----*/
 body{
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", "sans serif";
     margin: 0px;
 }
 /*Parametre de text*/
-h1{
+.h1titre{
     font-size: 20px;
     font-weight: 900;
     }
-h2{
+.h2titre{
     font-size: 16px;
-    font-weight: 900;
+    font-weight: 900 !important;
 }
-h3{
+.h3titre{
     font-size: 14px;
     font-weight: 900;
     padding-right: 50px;
@@ -31,11 +31,13 @@ header{
                     "bottom  bottom" 40px;
 } 
 .logo{
+    width: 45%;
     grid-area: topLeft;
     padding-left: 20px;
     padding-top: 30px;
 }
 .menu{
+    width: 100%;
     text-align: center;
     grid-area: bottom;
     display: flex;
@@ -45,7 +47,7 @@ header{
     text-decoration: none;
     color: black;
     font-weight: bolder;
-    width: 100%;
+    width: 50%;
     border-bottom: #F2F2F2 3px solid;
 }
 .menu-item:hover{
@@ -53,6 +55,7 @@ header{
     color:  #0065FC;
 }
 .inscription{
+    
     grid-area: topRight;
     padding-right: 20px;
     padding-top: 50px;
@@ -61,13 +64,11 @@ header{
 #inscriptionLien{
     text-decoration: none;
     color: #0065FC;
-    font-weight: 600;
+    font-weight: 900;
 }
 /*Trouver votre hébergement*/
 .trouverhebergement{
-    width: 100%;
     padding-left: 20px;
-    padding-right: 20px;
 }
 .formulaire{
     display: flex;
@@ -96,9 +97,13 @@ header{
     border-right: none;
     padding-left: 20px;
     color: black;
-    font-weight: 700;  
+    font-weight: 700; 
+    outline: none;
 }
-
+input::placeholder{
+    color: black;
+    font-weight: 900;
+}
 .intrechercher{
     font-family: raleway;
     font-size: 15px;
@@ -129,32 +134,23 @@ header{
     flex-direction: row;
 }
 .filter{
+    width: fit-content;
     display: flex;
     justify-content: left;
     align-items: center;
-    text-align: center;
+    text-align:inherit;
     border: #F2F2F2 solid 2px;
     border-left: #DEEBFF;
     border-radius: 25px;
-    height: 48px;
+    height: 38px;
     margin-bottom: 15px;
-}
-#economique{
-    width: 175px;
-    margin-right: 15px;
-}
-#familial{
-    width: 135px;
-}
-#romantique{
-    width: 170px;
-}
-#animaux{
-    width: 220px;
+    padding-right: 5px;
+    margin-right: 5px;
+    margin-left: 10px;
 }
 .h-icone{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: flex; 
     justify-content: center;
     align-items: center;
@@ -181,7 +177,7 @@ header{
     display: flex;
     align-items: flex-start;
     padding-top: 30px;
-    padding-right: 30px;
+    padding-right: 10px;
 }
 #iconeinfo{
     display: flex;
@@ -195,7 +191,6 @@ header{
     border: #F2F2F2 solid 1px;
     margin-right: 5px;
 }
-
 #textinfo{
     margin-top: 0px;
     margin-bottom: 0px;
@@ -205,7 +200,7 @@ header{
 .pluspop{
     background-color: #F2F2F2;
     padding: 10px;
-    height: auto;
+    
 }
 .pop{
     display: flex;
@@ -220,7 +215,7 @@ header{
     flex-direction: column;
 }
 .blocpop{
-    width: 330px;
+    width: 98%;
     height: 145px;
     background-color: white;
     border-radius: 25px;
@@ -235,8 +230,7 @@ header{
     transform: scale(1.2);
 }
 .imgpop{
-    width: 125px;
-    height:140px;
+    width: 40%;
     padding: 3px;
     border-radius: 25px 0 0 25px  ;
     object-fit: cover;
@@ -288,12 +282,11 @@ header{
 }
 /*Hébergement à Marseille*/
 .hebergement{
-    padding: 20px;
-    height: auto;
+    padding: 20px 25px 20px 20px;
 }
 .blocheb{
     width:100%;
-    height: auto;
+    height: 230px;
     background-color: white;
     border-radius: 25px;
     display: flex;
@@ -306,7 +299,8 @@ header{
     transform: scale(1.2);
 }
 .imgheber{
-    height:120px;
+    width: 94%;
+    height:60%;
     padding: 5px;
     border-radius: 25px 25px 0 0 ;
     object-fit: cover;
@@ -337,10 +331,9 @@ header{
     display: flex;
     flex-direction: column;
     padding-bottom: 10px;
-    width: 100%;
 }
 .activite{
-    width:335px;
+    width:98%;
     height: 190px;
     background-color:white;
     border-radius: 25px;
@@ -356,7 +349,7 @@ header{
 }
 .imgactiv{
     height:136px;
-    width: 100%;
+    
     border-radius: 25px 25px 0 0 ;
     object-fit: cover;
 }
@@ -371,7 +364,11 @@ header{
 /*Footer*/
 .footer{
     background-color: #F2F2F2;
-    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content:stretch; 
+    padding-left: 30px;   
+    padding-right: 15%;  
 }
 .footerh2{
     font-size: 15px;
@@ -383,27 +380,18 @@ header{
     text-decoration: none;
     color: black;
     height: 30px;
-}
-
-.footer{
-    display: flex;
-    flex-direction: column;
-    justify-content:stretch; 
-    padding-left: 30px;   
-    padding-right: 15%;  
-}
+}  
 .footer1, .footer2, .footer3{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 100%;
 }
 /*------------ desktop-----------------*/
 @media screen and (min-width: 800px) {
 /*header*/
-header{ 
-    grid-template: "topLeft top top topRight" 100px / auto 160px 160px 100px;
-    width: auto;
+header{
+    width: 100%;
+    grid-template: "topLeft top top topRight" 13% / auto 25% 25% 13%;
 }
 .menu{
    grid-area: top;
@@ -459,12 +447,7 @@ header{
     display: flex;
     flex-direction: row;
 }
-#economique, #familial, #romantique, #animaux{
-    margin-right: 25px;
-}
-#economique{
-    margin-left: 35px;
-}
+
 /*Hébergement et Les plus populaire*/
 /*Hébergement*/
 .hebetpop{
@@ -474,106 +457,112 @@ header{
     align-items:flex-start;
     text-align:left;
     margin-bottom: 50px;
-    margin-left:50px;
+    margin-left:10px;
 }
 .hebergement{
-    flex: 65%;    
-    background-color: #F2F2F2;
+    width: 65%;
     height: 600px;
+    background-color: #F2F2F2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     border-radius: 25px;
-    margin-right: 20px;
+    margin-right: 10px;
     padding-top: 20px;
-    padding-right: 40px;
-    padding-left: 40px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 .blocheb1, .blocheb2{
+    width:98%;
+    height: 200px;
     display: flex; 
     flex-direction: row;
     justify-content: space-between;
     padding-right: 0px;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.blocheb1{
+    margin-top: 0px;
 }
 .blocheb{
-    width:245px;
-    height:200px;
-    margin-right: 20px;
+    width: 34%;
+    margin-right: 10px;
 }
 .bloctextheb{
     padding-left: 15px;
 }
 .pop{
-    padding-bottom: 5px;
+    padding-bottom: 15px;
+    padding-right: 0px;
 }
 .pluspop{
-    flex: 25%;
+    width: 30%;
     border-radius: 25px;
-    width: 420px;
     height: 600px;
-    margin-left: 20px;
+    margin-left: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 35px;
-    padding-right: 40px;  
+    padding-left: 20px;
+    padding-right: 20px;  
 }
 .titreheb{
     margin-bottom: 5px;
     padding-right: 30px;
 }
+.hebtext{
+    padding-right: 0px;
+}
 /*Les plus populaires*/
 .bloctext{
+    padding-left: 5px;
+    }
+.h3titre{
     padding-right: 0px;
 }
 .blocpop{
-        margin-bottom: 30px;
+        margin-bottom: 25px;
 }
 .hebtext{
     margin-top: 0px;
 }
 .etoilespop{
-    padding-top: 10px;
+    padding-top: 0px;
 }
 /*Activités*/
 .txttitreactiv{
     padding-left: 10px;
 }
 .activitephoto{
-margin-bottom: 55px;   
-margin-left: 50px; 
+   margin-bottom: 55px;   
 }
 .activtext{
     margin-bottom: 15px;
 }
 .imgactivite{
-    width: 100%;
     height: 445px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    }
+}
+.activiteResponsive{
+width: 23%;
+justify-content: space-between;
+}
 .activite{
     height: auto;
     margin-bottom: 0px;
-    width: 305px;
     border-radius: 25px;
-    margin-left: 0px;
-    margin-right: 20px;
-}
-.blocactivite{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    height: 100%;
 }
 .activitedesktop{
     height: auto;
-    width: 100%;
+    width: 23%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 .imgactivite14{
-    height: 400px;
-    width: 305px;
+    height: 88%;
 }
 .imgactivite2{
    height: 180px;
