0808 a revoir les finitions

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Mobile First----0708 a refaire activite----iphone8 375px-----*/
+/* Mobile First----0808 a revoir les finitions----iphone8 375px-----*/
 body{
     font-family: "Raleway", "sans serif";
     margin: 0px;
