--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
-<<<<<<< Updated upstream
-/* Mobile First----0808 a revoir les finitions----iphone8 375px-----*/
-=======
-/* Mobile First----0808 a refaire desktop hebergement----iphone8 375px-----*/
->>>>>>> Stashed changes
+/*zadna zmena, footer je ok*/
 body{
     font-family: "Raleway", "sans serif";
     margin: 0px;
